<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.Fragments.AuthenticationFragment"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fragment_authentication_margin_bottom_email"
        android:hint="@string/authentication_email_hint"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:id="@+id/fragment_authentication_edit_email"
        android:theme="@style/MyTheme.EditText"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/authentication_password_hint"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:id="@+id/fragment_authentication_edit_password"
        android:theme="@style/MyTheme.EditText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authentication_wrong"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone"
        android:id="@+id/fragment_authentication_txt_wrong_log_in"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/authentication_log_in_btn"
        android:id="@+id/fragment_authentication_btn_login"
        android:textColor="@color/white"
        android:background="@drawable/custom_button_enabled"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/authentication_register_btn"
        android:id="@+id/fragment_authentication_btn_register"
        android:textColor="@color/white"
        android:background="@drawable/custom_button_enabled"/>

</LinearLayout>