<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="false"
    android:id="@+id/fragment_add_property_snackbar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Controller.Fragments.AddPropertyFragment"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/property_main_data"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:baselineAligned="false"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="0.45"
                android:orientation="vertical"
                android:background="@drawable/custom_border_outlined">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dropdown"
                    android:id="@+id/fragment_add_property_spinner_type"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"/>

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:baselineAligned="false">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/fragment_add_property_input_layout_price">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/property_price"
                    android:inputType="numberDecimal"
                    android:id="@+id/fragment_add_property_input_edit_price"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/fragment_add_property_input_layout_area">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/property_area"
                    android:inputType="numberDecimal"
                    android:id="@+id/fragment_add_property_input_edit_area"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_media"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="16dp"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/fragment_add_property_container_photo">

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/custom_border"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/fragment_add_property_linear_add_photo">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_add_dark_grey_24dp"
                        android:contentDescription="@string/adding_photo"/>

                </LinearLayout>

            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/property_address"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:baselineAligned="false">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/fragment_add_property_input_layout_postal_code">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/property_postal_code"
                    android:inputType="number"
                    android:id="@+id/fragment_add_property_input_edit_postal_code"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/fragment_add_property_input_layout_house_nb">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/property_house_nb"
                    android:inputType="number"
                    android:id="@+id/fragment_add_property_input_edit_house_nb"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:baselineAligned="false">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/fragment_add_property_input_layout_city">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/property_city"
                    android:inputType="text"
                    android:id="@+id/fragment_add_property_input_edit_city"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/fragment_add_property_input_layout_address">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/property_address"
                android:inputType="text"
                android:id="@+id/fragment_add_property_input_edit_address"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_other_information"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"
            android:layout_marginBottom="16dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/fragment_add_property_input_layout_description">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/property_description"
                android:inputType="text"
                android:id="@+id/fragment_add_property_input_edit_description"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:baselineAligned="false">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/fragment_add_property_input_layout_nb_room">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/property_nb_room"
                    android:inputType="number"
                    android:id="@+id/fragment_add_property_input_edit_nb_room"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"/>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="0.55"
                android:layout_marginTop="4dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:background="@drawable/custom_border_outlined"
                android:gravity="center"
                android:id="@+id/fragment_add_property_container_entry_date">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/property_entry_date"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16.5sp"
                    android:id="@+id/fragment_add_property_txt_entry_date"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_arrow_drop_down_dark_grey_24dp"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:weightSum="1"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/property_poi_school"
                    android:id="@+id/fragment_add_property_checkbox_school"
                    android:onClick="onCheckboxClicked"
                    android:textSize="16sp"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/property_poi_shop"
                    android:id="@+id/fragment_add_property_checkbox_shop"
                    android:onClick="onCheckboxClicked"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/property_poi_parc"
                    android:id="@+id/fragment_add_property_checkbox_parc"
                    android:onClick="onCheckboxClicked"
                    android:textSize="16sp"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/property_poi_transport"
                    android:id="@+id/fragment_add_property_checkbox_public_transport"
                    android:onClick="onCheckboxClicked"
                    android:textSize="16sp"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/property_submit"
            android:textColor="@android:color/white"
            android:background="@android:color/darker_gray"
            android:id="@+id/fragment_add_property_btn_submit"/>

    </LinearLayout>

</ScrollView>