<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.Fragments.MortgageSimulatorFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp">

    <android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:id="@+id/fragment_mortgage_simulator_input_layout_amount"
    android:layout_marginBottom="16dp">

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mortgage_amount"
        android:inputType="numberDecimal"
        android:id="@+id/fragment_mortgage_simulator_input_edit_amount"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/fragment_mortgage_simulator_input_layout_duration"
        android:layout_marginBottom="16dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mortgage_duration"
            android:inputType="number"
            android:id="@+id/fragment_mortgage_simulator_input_edit_duration"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/fragment_mortgage_simulator_input_layout_rate"
        android:layout_marginBottom="16dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mortgage_rate"
            android:inputType="numberDecimal"
            android:id="@+id/fragment_mortgage_simulator_input_edit_rate"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monthly_paiement"
        android:textSize="17sp"
        android:visibility="gone"
        android:id="@+id/fragment_mortgage_simulator_txt"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:textStyle="bold"
        android:id="@+id/fragment_mortgage_simulator_txt_monthly"/>

</LinearLayout>