<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.Activities.AuthenticationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_authentication"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_image_description"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:alpha="0.5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/acitivty_authentication_fragment_container_padding_start"
        android:paddingEnd="@dimen/acitivty_authentication_fragment_container_padding_end"
        android:paddingTop="@dimen/acitivty_authentication_fragment_container_padding_top"
        android:paddingBottom="@dimen/acitivty_authentication_fragment_container_padding_bottom"
        android:id="@+id/activity_authentication_fragment_container"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/app_name"
            android:textColor="#FFF"
            android:textSize="22sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/acitivty_authentication_margin_bottom_slogan"
            android:text="@string/app_slogan"
            android:textColor="#FFF"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</RelativeLayout>

